fix: 일부 변경 안 된 문구 재수정 ( 사용자 -> 멤버 )

--- a/webapp/channels/src/i18n/ko.json
+++ b/webapp/channels/src/i18n/ko.json
@@ -2393,7 +2393,7 @@
   "edit_channel_header.editHeader": "대화방 헤더 설정...",
   "edit_channel_header.previewHeader": "헤더 설정",
   "edit_channel_header_modal.cancel": "취소",
-  "edit_channel_header_modal.description": "상단 채널 이름 옆에 표시될 글자를 편집하세요.",
+  "edit_channel_header_modal.description": "상단 대화방 이름 옆에 표시될 글자를 편집하세요.",
   "edit_channel_header_modal.error": "채널 헤더가 너무 깁니다. 더 짧은 헤더를 사용하세요.",
   "edit_channel_header_modal.save": "저장",
   "edit_channel_header_modal.title": "{channel}의 헤더 설정",
@@ -2831,7 +2831,7 @@
   "multiselect.numGroupsRemaining": "[↑↓: 이동, ↵: 선택] {num, number} 명 이상 추가할 수 있습니다. ",
   "multiselect.numPeopleRemaining": "[↑↓: 이동, ↵: 선택] {num, number} 명 이상 추가할 수 있습니다. ",
   "multiselect.numRemaining": "{num, number}명 더 추가할 수 있습니다.",
-  "multiselect.placeholder": "사용자를 검색하고 추가하세요.",
+  "multiselect.placeholder": "멤버를 검색하고 추가하세요.",
   "multiselect.selectChannels": "↑↓키로 탐색하고, ↵키로 선택합니다.",
   "multiselect.selectTeams": "↑↓키로 탐색하고, ↵키로 선택합니다.",
   "navbar.addGroups": "그룹 추가하기",
