--- a/webapp/channels/src/i18n/ko.json
+++ b/webapp/channels/src/i18n/ko.json
@@ -3589,7 +3589,7 @@
   "search_header.results": "검색 결과",
   "search_header.title2": "최근 멘션",
   "search_header.title3": "보관된 메시지",
-  "search_header.pinnedPosts": "고정된 메시지",
+  "search_header.pinnedPosts": "공지사",
   "search_header.channelFiles": "파일",
   "search_bar.messages_tab": "메시지",
   "search_bar.files_tab": "파일",
@@ -3635,7 +3635,7 @@
   "no_results.mentions.subtitle": "다른 멤버가 나를 언급하거나 멘션에 등록한 단어를 포함하는 메시지는 이곳에 나타납니다.",
   "no_results.mentions.title": "멘션 없음",
   "no_results.pinned_posts.subtitle": "대화방에 참여한 모든 멤버가 볼 수 있습니다. 공지하기를 선택하여 이 곳에 표시할 수 있습니다.",
-  "no_results.pinned_posts.title": "고정된 메시지 없음",
+  "no_results.pinned_posts.title": "공지사항 없음",
   "no_results.user_group_members.subtitle": "There are currently no members in this group, please add one.",
   "no_results.user_group_members.title": "No members yet",
   "no_results.user_groups.subtitle": "Groups are a custom collection of users that can be used for mentions and invites.",
@@ -3665,7 +3665,7 @@
   "channel_info_rhs.top_buttons.muted": "알림 켜기",
   "channel_info_rhs.top_buttons.mute": "알림 끄기",
   "channel_info_rhs.menu.files": "파일",
-  "channel_info_rhs.menu.pinned": "고정된 메시지",
+  "channel_info_rhs.menu.pinned": "공지사항",
   "channel_info_rhs.menu.notification_preferences": "단체방 알림 설정",
   "channel_info_rhs.menu.members": "멤버",
   "channel_info_rhs.top_buttons.add_people": "멤버 추가",
@@ -3724,5 +3724,42 @@
   "login.subtitle": "(유)일성 메신저",
   "search_header.search": "검색",
   "sidebar_left.sidebar_channel_menu.markAsRead": "안 읽음 표시",
-  "single_image_view.download_tooltip": "다운로드"
+  "single_image_view.download_tooltip": "다운로드",
+  "user.settings.notifications.keywordsWithNotification.title": "멘션 알림",
+  "user.settings.notifications.sensitiveCustomWords": "다른 알림받을 단어들을 쉼표, Tab 키로 구분하여 입력:",
+  "user.settings.notifications.keywordsWithNotification.extraInfo": "어느 사용자가 내 사용자 아이디(\"@{username}\") 또는 위에서 선택한 옵션중 하나라도 포함되는 메시지를 보낼 때 멘션이 실행됩니다.",
+  "user.settings.display.availabilityStatusOnPostsDescription": "사용 설정하면 메시지 목록의 프로필 이미지에 온라인 사용 가능 여부가 표시됩니다.",
+  "user.settings.display.lastActiveDesc": "활성화하면 다른 사용자가 내가 마지막으로 활동한 시간을 볼 수 있습니다.",
+  "user.settings.display.lastActiveDisplay": "마지막 활동 시간 공유",
+  "user.settings.display.oneClickReactionsOnPostsTitle": "메시지에 대한 빠른 반응",
+  "user.settings.languages.promote1": "사용자 인터페이스에 표시할 언어를 선택합니다.",
+  "user.settings.advance.onForAllMessages": "모든 메시지에 대해 켜기",
+  "user.settings.advance.onForCode": "``로 시작하는 코드 블록에 대해서만 켜기",
+  "user.settings.advance.sendDesc": "활성화된 경우 Ctrl + Enter 를 누르면 메시지가 전송되고 Enter 를 누르면 새 줄이 삽입됩니다.",
+  "user.settings.advance.sendDesc.mac": "활성화된 경우 ⌘ + Enter 를 누르면 메시지가 전송되고 Enter 를 누르면 새 줄이 삽입됩니다.",
+  "user.settings.advance.formattingDesc": "이 설정을 활성화하면 링크 생성, 이모티콘 표시, 텍스트 스타일 지정, 줄 바꿈 추가 등 글의 서식이 지정됩니다. 기본적으로 이 설정은 활성화되어 있습니다.",
+  "user.settings.advance.unreadScrollPositionDesc": "읽지 않은 채널을 볼 때 스크롤 위치를 선택합니다. 채널은 볼 때 항상 읽음으로 표시됩니다.",
+  "user.settings.advance.unreadScrollPositionTitle": "읽지 않은 채널을 볼 때의 스크롤 위치",
+  "user.settings.advance.startFromLeftOff": "중단한 부분부터 다시 시작하기",
+  "user.settings.advance.startFromNewest": "최신 메시지에서 시작하기",
+  "user.settings.advance.syncDrafts.Title": "메시지 초안이 서버와 동기화되도록 허용",
+  "user.settings.advance.syncDrafts.Desc": "이 기능을 활성화하면 메시지 초안이 서버와 동기화되어 모든 장치에서 액세스할 수 있습니다. 비활성화하면 메시지 초안이 작성된 디바이스에만 로컬로 저장됩니다.",
+  "general_tab.teamIconLastUpdated": "이미지 마지막 업데이트 {date}",
+  "search_header.pinnedMessages": "공지사항",
+  "no_results.pinned_messages.subtitle": "공지사항을 표시하려면 표시할 메시지의 메뉴를 열고 공지하기를 선택합니다. 공지사항은 이 채널의 모든 사용자에게 표시됩니다.",
+  "no_results.pinned_messages.title": "아직 공지사항이 없습니다.",
+  "postlist.toast.searchHint": "팁: {searchShortcut} 를 사용하여 이 채널을 검색합니다.",
+  "shortcuts.nav.open_close_sidebar": "오른쪽 사이드바 열기 또는 닫기:\tCtrl|.",
+  "shortcuts.nav.open_close_sidebar.mac": "오른쪽 사이드바 열기 또는 닫기:\t⌘|.",
+  "shortcuts.nav.expand_sidebar": "오른쪽 사이드바 확장:\tCtrl|Shift|.",
+  "shortcuts.nav.expand_sidebar.mac": "오른쪽 사이드바 확장:\t⌘|Shift|.",
+  "shortcuts.nav.open_channel_info": "채널 정보 보기:\tCtrl|Alt|I",
+  "shortcuts.nav.open_channel_info.mac": "채널 정보 보기:\t⌘|Shift|I",
+  "shortcuts.nav.toggle_unreads": "읽지 않은 채널/모든 채널 토글:\tCtrl|Shift|U",
+  "shortcuts.nav.toggle_unreads.mac": "읽지 않은 채널/모든 채널 토글:\t⌘|Shift|U",
+  "shortcuts.msgs.comp.last_reaction": "React to last message:\tCtrl|Shift|⧵",
+  "shortcuts.msgs.comp.last_reaction.mac": "React to last message:\t⌘|Shift|⧵",
+  "shortcuts.msgs.search_channel": "채널에서:\tCtrl|F",
+  "shortcuts.msgs.search_channel.mac": "채널에서:\t⌘|F",
+  "shortcuts.msgs.search.header": "검색"
 }
